# heat

./: .gitignore  Makefile.am  README  aclocal.m4  config.h  config.h.in  configure.ac  max_error.awk  poiss.pbs
doc/: Makefile.am
doc/doxygen/: .gitignore
doc/eval/: Makefile.am  common.gnu  exact.gnu  poiss-smooth.gnu  poiss.gnu  poiss_1e-12.gnu  real.gnu
doc/report/: .gitignore  Makefile.am  report.tex
doc/report/auto/: .gitignore
doc/report/images/: exact.eps  poiss-serial.eps  poiss.eps  poiss_1e-12.eps
eval/: poiss.gnu  real.gnu
m4/: ac_prog_ps2pdf.m4
mk/: gcov-recursive.am  gcov.am
src/: Makefile.am
src/common/: .gitignore  Makefile.am  matrix.c  mpi-common.c  mpi-utils.c  mult.c  vector.c
src/common/includes/: error.h  macros.h  matrix.h  mpi-common.h  mpi-utils.h  mult.h  vector.h
src/main/: .gitignore  Makefile.am  cl.c  gnuplot.c  main.c  mpi-common.c  stats.c
src/main/includes/: cl.h  gnuplot.h  mpi-common.h  stats.h
src/poiss/: Makefile.am
src/poiss/2d/: .gitignore  Makefile.am  poiss_2d.c
src/poiss/2d/includes/: poiss_2d.h
src/solv/: .gitignore  Makefile.am  cds_matrix.c  conjugate.c  mult.c  util.c  vector.c
src/solv/includes/: cds_matrix.h  conjugate.h  error.h  matrix.h  mult.h  vector.h
test/: Makefile.am
test/common/: .gitignore  Makefile.am  common_suite.c  mult_test.c  vector_test.c
test/common/includes/: mult_test.h  vector_test.h
test/solv/: .gitignore  Makefile.am  conjugate_test.c  mult_test.c  solv_suite.c  vector_test.c
test/solv/includes/: conjugate_test.h  mult_test.h  vector_test.h
